# amp-man

./: CMakeLists.txt
src/: pluginAudioEditor.cpp  pluginAudioEditor.hpp  pluginProcessor.cpp  pluginProcessor.hpp
